feat(M-016): fix compilation and runtime errors for report and summary module M016